--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Hello meditation!</h1>
   <h2>Only 3 minutes meditation</h2>
-  change world!
+  will change world!
 </body>
 
 </html>
