--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
   <h1>Hello meditation!</h1>
   <h2>Only 3 minutes meditation</h2>
   will change world!
+
+  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vero architecto temporibus, quibusdam odit quo enim corrupti
+  blanditiis corporis error animi aut saepe! Architecto, quas, commodi esse impedit corrupti labore, ab quidem dolorem
+  laborum hic quaerat obcaecati delectus illo blanditiis? Eos, quae? Quod animi rem neque dolorum sunt? Id, similique
+  non.
 </body>
 
 </html>
